--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -20,8 +20,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.1",
+    "validator": "^13.7.0"
   }
 }
