feat: 🎸 Added CRUD operations for user objects and file to seed
Added routes for CRUD operations for user objects and files to seed
users into the database. Also ran build to build the ts files

--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
+    "seed:user": "node dist/seed.js",
     "build": "tsc -p ."
   },
   "keywords": [],
