--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "seed:user": "node dist/seed.js",
+    "seed:db": "node dist/seed.js",
     "build": "tsc -p ."
   },
   "keywords": [],
